--- a/bitmap_font/bitmap_font.css
+++ b/bitmap_font/bitmap_font.css
@@ -18,3 +18,16 @@ body {
     border: 3px solid #12f;
     color: #12f;
 }
+
+#output {
+   font-family: monospace;
+   font-size: 10px;
+   width: 500px;
+   background-color: #00b;
+   color: #eee;
+   border: 1px solid #000;
+   margin: auto;
+   transition: height 0.2s;
+   padding: 4px;
+   display: none;
+}
